--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -5,17 +5,58 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="512" Width="800">
     <Grid>
-        <TextBox x:Name="Name" HorizontalAlignment="Left" Margin="28,26,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="140" Height="29" GotFocus="Name_GotFocus"/>
-        <ComboBox x:Name="professions" HorizontalAlignment="Left" Margin="28,79,0,0" VerticalAlignment="Top" Width="140" Height="26" Cursor="">
-            <ListBoxItem Content="Archer"/>
-            <ListBoxItem Content="Mage"/>
-            <ListBoxItem Content="Warrior"/>
-        </ComboBox>
-        <Label x:Name="Agility" Content="Agility" HorizontalAlignment="Left" Margin="28,186,0,0" VerticalAlignment="Top" Width="140"/>
-        <Label x:Name="Intelligence" Content="Intelligence" HorizontalAlignment="Left" Margin="28,244,0,0" VerticalAlignment="Top" Width="140"/>
-        <Label x:Name="Endurance" Content="Endurance" HorizontalAlignment="Left" Margin="28,302,0,0" VerticalAlignment="Top" Width="140"/>
-        <Label x:Name="Strength" Content="Strength" HorizontalAlignment="Left" Margin="28,134,0,0" VerticalAlignment="Top" Width="140"/>
+        <Grid x:Name="Points" Height="484" VerticalAlignment="Top">
+            <TextBox x:Name="Name" HorizontalAlignment="Left" Margin="24,26,0,0" TextWrapping="Wrap" Text=" Name Character" VerticalAlignment="Top" Width="148" Height="29" GotFocus="Name_GotFocus"/>
+            <ComboBox x:Name="professions" HorizontalAlignment="Left" Margin="24,79,0,0" VerticalAlignment="Top" Width="148" Height="26"  SelectionChanged="professions_SelectionChanged">
+
+
+                <ListBoxItem Content="Archer"/>
+                <ListBoxItem Content="Mage"/>
+                <ListBoxItem Content="Warrior"/>
+            </ComboBox>
+            <Label Content="Agility" HorizontalAlignment="Left" Margin="58,272,0,0" VerticalAlignment="Top" Width="81"/>
+            <Label Content="Intelligence" HorizontalAlignment="Left" Margin="57,322,0,0" VerticalAlignment="Top" Width="81" RenderTransformOrigin="0.502,2.234"/>
+            <Label Content="Endurance" HorizontalAlignment="Left" Margin="57,373,0,0" VerticalAlignment="Top" Width="81" RenderTransformOrigin="0.469,1.763"/>
+            <Label Content="Strength" HorizontalAlignment="Left" Margin="58,228,0,0" VerticalAlignment="Top" Width="80" FlowDirection="LeftToRight"/>
+            <Button x:Name="StrengthPointsPlus" Content="+" HorizontalAlignment="Left" Margin="143,253,0,0" VerticalAlignment="Top" Height="26" Width="28" RenderTransformOrigin="0.551,0.1" FontSize="14" Click="StrengthPointsPlus_Click"/>
+            <Button x:Name="AgilityPointsPlus" Content="+" HorizontalAlignment="Left" Margin="143,296,0,0" VerticalAlignment="Top" Width="29" Height="26" FontSize="14"/>
+            <Button x:Name="IntelligencePointsPlus" Content="+" HorizontalAlignment="Left" Margin="143,346,0,0" VerticalAlignment="Top" Width="29" Height="26" FontSize="14"/>
+            <Button x:Name="EndurancePointsPlus" Content="+" HorizontalAlignment="Left" Margin="143,391,0,0" VerticalAlignment="Top" Height="28" Width="29" FontSize="14" RenderTransformOrigin="0.764,1.531"/>
+            <TextBox x:Name="extraPoints" HorizontalAlignment="Left" Margin="24,201,0,0" TextWrapping="Wrap" Text=" Extra points" VerticalAlignment="Top" Width="148" Height="27" RenderTransformOrigin="0.502,0.637"/>
+            <TextBox x:Name="ChosenProfession" HorizontalAlignment="Left" Margin="24,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="148" Height="25"/>
+            <Label Content="Profession:" HorizontalAlignment="Left" Margin="28,134,0,0" VerticalAlignment="Top" Width="140"/>
+            <Button x:Name="StrengthPointsMinus" Content="-" HorizontalAlignment="Left" Margin="24,253,0,0" VerticalAlignment="Top" Height="26" Width="28" RenderTransformOrigin="0.595,0.648" FontSize="14"/>
+            <Label x:Name="points" Content="10" HorizontalAlignment="Left" Margin="149,202,0,0" VerticalAlignment="Top" Height="23" RenderTransformOrigin="0.667,0.479"/>
+            <Button x:Name="AgilityPointsMinus" Content="-" HorizontalAlignment="Left" Margin="24,296,0,0" VerticalAlignment="Top" FontSize="14" Width="28" Height="26"/>
+            <Button x:Name="IntelligencePointsMinus" Content="-" HorizontalAlignment="Left" Margin="24,346,0,0" VerticalAlignment="Top" Width="28" Height="26"/>
+            <Button x:Name="EndurancePointsMinus" Content="-" HorizontalAlignment="Left" Margin="24,391,0,0" VerticalAlignment="Top" FontSize="14" Width="28" Height="28"/>
+            <Label x:Name="Strength" Content="10" HorizontalAlignment="Left" Margin="78,253,0,0" VerticalAlignment="Top" Width="38" FontSize="14"/>
+            <Label x:Name="Agility" Content="10" HorizontalAlignment="Left" Margin="78,293,0,0" VerticalAlignment="Top" FontSize="14" Width="38"/>
+            <Label x:Name="Intelligence" Content="10" HorizontalAlignment="Left" Margin="78,348,0,0" VerticalAlignment="Top" FontSize="14" Width="38"/>
+            <Label x:Name="Endurance" Content="10" HorizontalAlignment="Left" Margin="78,391,0,0" VerticalAlignment="Top" FontSize="14" Width="36"/>
+            <Label Content="Indicators" HorizontalAlignment="Left" Margin="206,26,0,0" VerticalAlignment="Top" Width="159" Height="29"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,59,0,0" TextWrapping="Wrap" Text="Amount of Life" VerticalAlignment="Top" Width="159" Height="27"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,103,0,0" TextWrapping="Wrap" Text="Physical defense" VerticalAlignment="Top" Width="159" Height="24"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,147,0,0" TextWrapping="Wrap" Text="Physical damage" VerticalAlignment="Top" Width="159" Height="26"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,192,0,0" TextWrapping="Wrap" Text="Magic defense" VerticalAlignment="Top" Width="159" Height="28"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,241,0,0" TextWrapping="Wrap" Text="Magic damage" VerticalAlignment="Top" Width="159" Height="25"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,285,0,0" TextWrapping="Wrap" Text="Amount of mana" VerticalAlignment="Top" Width="159" Height="26"/>
+            <Label x:Name="life" Content="label" HorizontalAlignment="Left" Margin="327,60,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.382,0.456"/>
+            <Label x:Name="physicDefense" Content="Label" HorizontalAlignment="Left" Margin="327,103,0,0" VerticalAlignment="Top"/>
+            <Label x:Name="physicDamage" Content="" HorizontalAlignment="Left" Margin="327,147,0,0" VerticalAlignment="Top" Width="35"/>
+            <Label x:Name="magicDefense" Content="Label" HorizontalAlignment="Left" Margin="327,194,0,0" VerticalAlignment="Top"/>
+            <Label x:Name="magicDamage" Content="Label" HorizontalAlignment="Left" Margin="327,241,0,0" VerticalAlignment="Top"/>
+            <Label x:Name="mana" Content="Label" HorizontalAlignment="Left" Margin="327,285,0,0" VerticalAlignment="Top"/>
+            <Button x:Name="experience" Content="Experience" HorizontalAlignment="Left" Margin="206,391,0,0" VerticalAlignment="Top" Width="86" Height="26"/>
+            <TextBox HorizontalAlignment="Left" Margin="206,330,0,0" TextWrapping="Wrap" Text="Character Level" VerticalAlignment="Top" Width="159" Height="26"/>
+            <Label x:Name="level" Content="Label" HorizontalAlignment="Left" Margin="326,330,0,0" VerticalAlignment="Top"/>
+            <Button x:Name="saveCharacter" Content="Save character" HorizontalAlignment="Left" Margin="206,436,0,0" VerticalAlignment="Top" Height="28" Width="86" Click="saveCharacter_Click"/>
+            <Label Content="List of sohan characters" HorizontalAlignment="Left" Margin="400,26,0,0" VerticalAlignment="Top" Width="167" Height="29"/>
+            <Button x:Name="editing" Content="Editing Character Data" HorizontalAlignment="Left" Margin="400,391,0,0" VerticalAlignment="Top" Width="167" Height="26"/>
+            <Button x:Name="deleting" Content="Deleting a character" HorizontalAlignment="Left" Margin="400,436,0,0" VerticalAlignment="Top" Width="167" Height="28"/>
+            <ListBox x:Name="savedСharacters" Margin="400,60,233,128" Loaded="savedСharacters_Loaded" SelectionChanged="savedСharacters_SelectionChanged"/>
+        </Grid>
     </Grid>
 </Window>
