--- a/ITParkWPFFinish/App.xaml
+++ b/ITParkWPFFinish/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp1.App"
+﻿<Application x:Class="ITParkWPFFinish.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp1"
+             xmlns:local="clr-namespace:ITParkWPFFinish"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
