--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBlock x:Name="namePersonage" HorizontalAlignment="Left" Margin="155,23,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Height="31" Width="236" FontSize="24" Padding="5,0,0,0">
+        <TextBlock x:Name="namePersonage" HorizontalAlignment="Left" Margin="48,95,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Height="31" Width="236" FontSize="24" Padding="5,0,0,0">
             <TextBlock.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="1"/>
@@ -19,7 +19,7 @@
             </TextBlock.Background>
         </TextBlock>
         <TextBlock x:Name="txtPower" HorizontalAlignment="Left" Margin="415,136,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
-        <Label Content="Personage" HorizontalAlignment="Left" Margin="48,18,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label Content="Personage" HorizontalAlignment="Left" Margin="48,53,0,0" VerticalAlignment="Top" FontSize="20" RenderTransformOrigin="0.697,1.777"/>
         <Label Content="Choose a profession" HorizontalAlignment="Left" Margin="48,161,0,0" VerticalAlignment="Top" Width="198" FontSize="20"/>
         <StackPanel HorizontalAlignment="Left" Margin="48,208,0,0" Orientation="Vertical" VerticalAlignment="Top" Height="121">
             <RadioButton x:Name="warriorRB" Content="Warrior" Width="181" Height="37" FontSize="24" Padding="4,-8,0,0" HorizontalAlignment="Left"/>
@@ -35,13 +35,17 @@
         <TextBlock x:Name="txtSkill" HorizontalAlignment="Left" Margin="415,179,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9"/>
         <TextBlock x:Name="txtIntellect" HorizontalAlignment="Left" Margin="415,226,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.622,3.935"/>
         <TextBlock x:Name="txtStamina" HorizontalAlignment="Left" Margin="415,267,0,0" TextWrapping="Wrap" Text="10" VerticalAlignment="Top" Height="30" Width="82" FontSize="24" TextAlignment="Center" Background="#FFD8C9C9" RenderTransformOrigin="0.61,3.401"/>
-        <Label Content="Health" HorizontalAlignment="Left" Margin="48,82,0,0" VerticalAlignment="Top" Width="102" Height="45" FontSize="22"/>
-        <TextBlock x:Name="txtHealth" HorizontalAlignment="Left" Margin="155,82,0,0" TextWrapping="Wrap" Text="health" VerticalAlignment="Top" Height="45" Width="100" FontSize="24" Background="#FFD8C9C9" TextAlignment="Center"/>
-        <TextBox x:Name="txtListOfPersonages" HorizontalAlignment="Left" Margin="559,55,0,0" TextWrapping="Wrap" Text="list of personages" VerticalAlignment="Top" Width="186" Height="244" FontSize="18" Background="#FFD8C9C9"/>
+        <Label Content="Health" HorizontalAlignment="Left" Margin="306,43,0,0" VerticalAlignment="Top" Width="101" Height="41" FontSize="22" HorizontalContentAlignment="Right"/>
+        <TextBlock x:Name="txtHealth" HorizontalAlignment="Left" Margin="425,40,0,0" TextWrapping="Wrap" Text="health" VerticalAlignment="Top" Height="44" Width="100" FontSize="24" Background="#FFD8C9C9" TextAlignment="Center"/>
+        <TextBox x:Name="txtListOfPersonages" HorizontalAlignment="Left" Margin="588,55,0,0" TextWrapping="Wrap" Text="list of personages" VerticalAlignment="Top" Width="186" Height="244" FontSize="18" Background="#FFD8C9C9"/>
         <Button x:Name="btnShow" Content="Show" HorizontalAlignment="Left" Margin="313,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
         <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="415,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
         <Button x:Name="btnAddToDB" Content="Add to DB" HorizontalAlignment="Left" Margin="518,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
         <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="622,330,0,0" VerticalAlignment="Top" Width="78" BorderThickness="3,3,3,3" FontSize="14"/>
+        <Button x:Name="btnPowerBoost" Content="+" HorizontalAlignment="Left" Margin="518,136,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
+        <Button x:Name="btnSkillBoost" Content="+" HorizontalAlignment="Left" Margin="518,180,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
+        <Button x:Name="btnIntellectBoost" Content="+" HorizontalAlignment="Left" Margin="518,226,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
+        <Button x:Name="btnStaminaBoost" Content="+" HorizontalAlignment="Left" Margin="518,268,0,0" VerticalAlignment="Top" Height="32" Width="26" BorderThickness="2,2,2,2" Background="#FFBED8C7" FontSize="20" FontStretch="UltraExpanded" Foreground="#FF16271B" Padding="1,-5,1,1"/>
 
     </Grid>
 </Window>
